--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "author": "",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --host 0.0.0.0  --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "build": "node build/build.js"
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --host 0.0.0.0 --port 8080 &",
+    "build": "node build/build.js",
+    "services":"node service/app.js &",
+    "start": "npm run dev && npm run services"
   },
   "dependencies": {
     "axios": "^0.17.1",
